@@ -1,3 +1,11 @@
+2005-01-18  Sarfraaz Ahmed <asarfraaz@novell.com>
+	
+	* calendar/e-cal-backend-exchange-calendar.c : Ordered the code to now
+	build the proper mime message for attachments to be sent to the server.
+	* calendar/e-cal-backend-exchange-tasks.c : Fixed some warnings	
+	* calendar/e-cal-backend-exchange.c : Re-ordered some code and fixed
+	some warnings.
+
 2005-01-17  Sushma Rai  <rsushma@novell.com>
 
 	* camel/camel-exchange-provider.c: Moved password expiry warning 
